Track dependencies of more RequreJS modules
If more modules are entered, print either a union of distict dependencies of aool modules, or an intersection of common depednencies of all modules.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "requirejs-dependencies",
   "version": "0.0.1",
-  "description": "Finds direct and indirect dependencies of a RequireJS module.",
+  "description": "Finds direct and indirect dependencies of one or more RequireJS modules.",
   "author": "Ferdinand Prantl <prantlf@gmail.com> (http://prantlf.tk/)",
   "keywords": [
     "requirejs",
