--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "requirejs-dependencies",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Finds direct and indirect dependencies of one or more RequireJS modules.",
   "author": "Ferdinand Prantl <prantlf@gmail.com> (http://prantlf.tk/)",
   "keywords": [
@@ -42,10 +42,11 @@
     "test": "npm run lint"
   },
   "dependencies": {
-    "amodro-trace": "1.0.3"
+    "amodro-trace": "1.0.3",
+    "requirejs-dependencies": "workspace:^0.0.2"
   },
   "devDependencies": {
-    "@types/node": "14.0.9",
+    "@types/node": "14.0.10",
     "@typescript-eslint/eslint-plugin": "3.1.0",
     "@typescript-eslint/parser": "3.1.0",
     "eslint": "7.1.0",
