--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "requirejs-dependencies",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "Finds direct and indirect dependencies of one or more RequireJS modules.",
   "author": "Ferdinand Prantl <prantlf@gmail.com> (http://prantlf.tk/)",
   "keywords": [
@@ -48,7 +48,6 @@
     "test": "npm run lint"
   },
   "dependencies": {
-    "@aduh95/viz.js": "3.0.0",
     "@hpcc-js/wasm": "0.3.14",
     "amodro-trace": "1.0.3",
     "bootstrap": "4.5.0",
@@ -59,6 +58,9 @@
     "morgan": "1.10.0",
     "popper.js": "1.16.1",
     "serve-static": "1.14.1"
+  },
+  "peerDependencies": {
+    "@aduh95/viz.js": "3.0.0"
   },
   "devDependencies": {
     "@types/node": "14.0.11",
