--- a/package.json
+++ b/package.json
@@ -38,17 +38,20 @@
   ],
   "scripts": {
     "build:js": "esbuild --outfile=www/js/index.min.js --external:path --external:util --external:child_process --external:fs --format=iife --sourcemap --bundle --minify www/js/index.js && esbuild --outfile=www/js/graph-support.min.js --sourcemap --minify www/js/graph-support.js && esbuild --outfile=www/js/module-support.min.js --sourcemap --minify www/js/module-support.js && esbuild --outfile=www/js/theme-support.min.js --sourcemap --minify www/js/theme-support.js",
+    "build:ts": "tsc test/typings.ts",
     "build:css": "csso www/css/index.css -s file -o www/css/index.min.css && csso www/css/bootstrap.darkly.css -s file -o www/css/bootstrap.darkly.min.css && csso www/css/bootstrap.flatly.css -s file -o www/css/bootstrap.flatly.min.css && html-minifier --collapse-whitespace --remove-comments --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --remove-tag-whitespace --use-short-doctype --remove-attribute-quotes --minify-css true --minify-js true -o www/index.min.html www/index.html",
     "build:html": "html-minifier --collapse-whitespace --remove-comments --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --remove-tag-whitespace --use-short-doctype --remove-attribute-quotes --minify-css true --minify-js true -o www/index.min.html www/index.html && sed -i \"s/VERSION/0.0.8/\" www/index.min.html",
-    "build": "npm run build:js && npm run build:css && npm run build:html",
+    "build": "npm run build:js && npm run build:css && npm run build:html && npm run build:ts",
     "prepare": "npm run build",
-    "lint:js": "eslint --cache --max-warnings=0 --ignore-pattern 'www/js/*.min.js' 'bin/*' lib www/js",
-    "lint:ts": "eslint --cache --max-warnings=0 --cache-location .tslintcache -c .tslintrc.yml lib/index.d.ts",
+    "lint:js": "eslint --cache --max-warnings=0 --ignore-pattern 'www/js/*.min.js' --ignore-pattern=test/typings.js 'bin/*' lib www/js",
+    "lint:ts": "eslint --cache --max-warnings=0 --cache-location .tslintcache -c .tslintrc.yml --ext=.ts lib test",
     "lint": "npm run lint:js && npm run lint:ts",
-    "fix:js": "eslint --cache --max-warnings=0 --fix --ignore-pattern 'www/js/*.min.js' 'bin/*' lib www/js",
-    "fix:ts": "eslint --cache --max-warnings=0 --cache-location .tslintcache -c .tslintrc.yml --fix lib/index.d.ts",
+    "fix:js": "eslint --cache --max-warnings=0 --fix --ignore-pattern 'www/js/*.min.js' --ignore-pattern=test/typings.js 'bin/*' lib www/js",
+    "fix:ts": "eslint --cache --max-warnings=0 --cache-location .tslintcache -c .tslintrc.yml --ext=.ts --fix lib test",
     "fix": "npm run fix:js && npm run fix:ts",
-    "test": "npm run lint"
+    "check:ts": "node test/typings",
+    "check": "npm run check:ts",
+    "test": "npm run lint && npm run check"
   },
   "dependencies": {
     "@aduh95/viz.js": "3.0.0",
@@ -71,11 +74,12 @@
     "eslint": "7.2.0",
     "eslint-config-standard": "14.1.1",
     "eslint-config-standard-with-typescript": "18.0.2",
-    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-import": "2.21.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.1",
     "html-minifier": "4.0.0",
+    "test": "0.6.0",
     "typescript": "3.9.5"
   }
 }
